add normalisation and validation back for CTSC users